--- a/config/locales/bg.yml
+++ b/config/locales/bg.yml
@@ -1,8 +1,18 @@
 bg:
   social:
-    email: "Ел.поща"
-    twitter: "Туитър"
-    facebook: "Фейсбук"
+    my connections: "Свързани профили"
+    connected as: "Свързани сте през %{connection} като %{username}."
+    remove connection: "Премахни"
+    connection friends: "Ето няколко потребителя от YouVersion с които сте свръзани през %{connection}:"
+    errors:
+      no friends: "Никой от твоите %{connection} приятели не е на YouVersion."
+      reset connection: "Грешка. Свържи връзката отново."
+    email:
+      name: "Ел.поща"
+    twitter:
+      name: "Туитър"
+    facebook:
+      name: "Фейсбук"
   api:
     users agree bool: "Трябва да се съгласите с условията за създаване на акаунт"
     users confirm password matches: "Новата парола не съвпада."
@@ -24,6 +34,9 @@ bg:
       title: "Започва със 100 милиона"
     mobile:
       title: "Библията"
+    connections:
+      index:
+        title: "Свързани профили"
   now: "Сега"
   celebrating 50MM: "С над 50 милиона инсталирани приложения"
   link: "Връзка"
@@ -40,8 +53,6 @@ bg:
   copy: "Копирай"
   copy confirmed: "Копирано!"
   new note: "Нова бележка"
-  twitter: "Туитър"
-  facebook: "Фейсбук"
   share success: "Съобщението е споделено"
   share error: "Грешка в съобщението. Опитайте отново."
   google plus: "Google +"
@@ -563,7 +574,7 @@ bg:
     suggestion html: "Може би имахте предвид %{suggestion_link}?"
     all versions: "Всички %{language_name} версии"
   donate:
-    donate now: "Направи дарение (САЩ)"
+    donate now: "Направи дарение"
     donate now intl: "или направи международно дарение"
     promo 1: "За всеки долар, който дадеш, още 10 човека ще могат да имат достъп до Библията на техните мобилни телефони."
     promo 2: "С YouVersion, Библията е винаги наблизо. Виж видеото."
@@ -571,7 +582,6 @@ bg:
     headline: "Всеки се нуждае от Божието слово"
     subhead: "Помогни на хората по света да имат Библията в ръката си"
     copy: "Представи си какво би било ако можеш да дадеш на всеки човек в света Библия. Давайки на YouVersion, ти правиш точно това. Живеем във време, за което мнозина само са мечтали, в което всеки, които има телефон може да получи Библията и лично да преживее историята на Божията любов към нас. Вашата подкрепа ни помага да продължим да помагаме на повече хора да прекарват повече време с Писанията."
-    amount: "Дарение (щ.д.)"
     name: "Име"
     card number: "Кредитна карта"
     card exp date: "Срок на годност (ММГГ)"
