--- a/config/locales/cs.yml
+++ b/config/locales/cs.yml
@@ -1,8 +1,18 @@
 cs:
   social:
-    email: "E-mail"
-    twitter: "Twitter"
-    facebook: "Facebook"
+    my connections: "Připojené účty"
+    connected as: "Jste připojen/a ke službě %{connection} jako %{username}"
+    remove connection: "Odstranit"
+    connection friends: "Zde jsou někteří YouVersion uživatelé, s kterými jste spojen/a na %{connection}u:"
+    errors:
+      no friends: "Žádný z vašich %{connection} přátel ještě není zaregistrovaný na YouVersion."
+      reset connection: "Promiňte, vyskytla se chyba. Prosím deaktivujte toto připojení a znovu ho připojte."
+    email:
+      name: "E-mail"
+    twitter:
+      name: "Twitter"
+    facebook:
+      name: "Facebook"
   api:
     users agree bool: "Pro vytvoření účtu musíte souhlasit se všeobecnými podmínkami."
     users confirm password matches: "Zadaná nová hesla nesouhlasí."
@@ -26,6 +36,9 @@ cs:
     mobile:
       title: "Aplikace Bible"
       description: "Desítky miliónů lidí používají aplikaci Bible ke čtení, poslouchání, sledování a sdílení Božího Slova. Stalo se to součástí jejich života. Stáhněte si bezplatnou aplikaci a získejte odkudkoli přístup ke svým záložkám, poznámkám a plánům čtení. Užívejte si stovky překladů, včetně zvukových nahrávek, na svém mobilním zařízení."
+    connections:
+      index:
+        title: "Připojené účty"
   now: "Aktuálně"
   celebrating 50MM: "Oslavujeme 50 milionů instalací aplikace!"
   link: "Odkaz"
@@ -42,8 +55,6 @@ cs:
   copy: "Kopírovat"
   copy confirmed: "Zkopírováno!"
   new note: "Nová poznámka"
-  twitter: "Twitter"
-  facebook: "Facebook"
   share success: "Vaše zpráva byla sdílena."
   share error: "Omlouváme, ve vaší zprávě se vyskytla chyba. Prosíme zkuste to znovu."
   google plus: "Google +"
@@ -87,7 +98,7 @@ cs:
   sign in to youversion: "Přihlásit se k YouVersion"
   remove: "Odstranit"
   confirm danger: "Ano, jsem si jistý/á"
-  registered ago: "Zaregistrován/a před %{time_ago}"
+  registered ago: "Zaregistrovali jste se před %{time_ago}"
   version header: "Překlad: %{version}"
   bible versions: "Překlady Bible"
   reader: "Čtenář"
@@ -144,7 +155,7 @@ cs:
   notes:
     list title: "Poznámky"
     loading community: "Načítání poznámek komunity..."
-    no community notes: "Nenašly se žádné poznámky odkazující na vybrané verše. Abyste mohl/a vytvořit poznámku, tak vyberte verš v Bibli a pak zmáčkněte tlačítko \"Vybrané\", které je nahoře nad textem."
+    no community notes: "Nenašly se žádné poznámky odkazující na vybrané verše. Abyste mohli vytvořit poznámku, tak vyberte verš v Bibli a pak zmáčkněte tlačítko \"Vybrané\", které je nahoře nad textem."
     public: "Veřejné"
     private: "Soukromé"
     is private: "Požadovaná poznámka je soukromá."
@@ -234,7 +245,7 @@ cs:
     no devices download copy: "Aplikace Bible je zcela zdarma, je založená na on-line Bibli YouVersion a je ji možno nainstalovat skoro na jakýkoli mobilní telefon. Aplikace Bible umožňuje svým uživatelům číst Bibli, sdílet verše na sociální sítě, vytvářet si záložky ze svých oblíbených pasáží a více&mdash;vše ve formátu, který drží krok s narůstajícím mobilním způsobem života. Navštivte <a href='http://www.youversion.com/download'>youversion.com/download</a> přímo z vašeho mobilního zařízení, stáhněte si aplikaci Bible a připojte si svůj uživatelský účet!"
     yes delete: "Ano, smazat můj účet"
     account delete success: "Váš YouVersion účet byl úspěšně vymazán. Doufáme, že budete mít stále další způsoby, jak přijít do kontaktu s Biblí. Některé z těchto aplikacích vám mohou pomoci, až budete pokračovat: <a href= http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
-    delete account description: "Pokud si smažete váš účet, ztratíte veškeré své informace, historii a údaje (jako poznámky, záložky, zvýraznění atd.) z YouVersion a aplikace Bible. Tento krok již nemůžete vzít zpět. Pokud si jste jistý/á, pokračujte níže."
+    delete account description: "Pokud si smažete váš účet, ztratíte veškeré své informace, historii a údaje (jako poznámky, záložky, zvýraznění atd.) z YouVersion a aplikace Bible. Tento krok již nemůžete vzít zpět. Pokud si jste jistí, pokračujte níže."
     user recent activity: "Nedávná aktivita uživatele %{user}"
     user notes: "Poznámky uživatele %{user}"
     my friends: "Přátelé"
@@ -247,7 +258,7 @@ cs:
     update email copy: "Napište novou e-mailovou adresu a klikněte na \"Aktualizovat e-mail\". Zašleme vám odkaz k potvrzení vaší nové e-mailové adresy."
     edit email: "Změnit e-mailovou adresu"
     update email check: "Zkontrolujte si, prosím, e-mail a klikněte na odkaz k potvrzení vaší nové e-mailové adresy."
-    confirm update email success: "Díky! Právě jste si aktualizoval/a vaši e-mailovou adresu. "
+    confirm update email success: "Díky! Právě jste si aktualizovali vaši e-mailovou adresu. "
     confirm update email error: "Omlouváme se, ale vyskytl se problém během dokončování změny vaší e-mailové adresy. "
     account confirmed: "Váš účet byl potvrzen!"
     account already confirmed: "Váš účet již byl potvrzen! Přihlašte se pro pokračování."
@@ -261,11 +272,11 @@ cs:
     forgot password check: "Úspěch! Zkontrolujte si e-mail kvůli novému heslu. "
     yes reset: "Ano, resetovat moje heslo. "
     yes reset and log out: "Ano, odhlásit mě a resetovat moje heslo. "
-    forgot password: "Zapoměl/a jste své heslo?"
+    forgot password: "Zapoměli jste své heslo?"
     resend success: "Váš potvrzovací e-mail byl znovu odeslán. Zkontrolujte si prosím váš e-mail."
     resend error: "Omlouváme se, ale během opětovného zasílání potvrzovacího e-mailu došlo k chybě. Přesvědčte se, prosím, že zadáváte správný, registrovaný e-mail, který ještě nebyl potvrzen. "
-    resend confirmation title: "Nedostal/a jste váš potvrzovací e-mail?"
-    resend confirmation copy: "Vložte zde níže e-mailovou adresu, kterou jste použil/a k registrování a my vám zašleme jiný potvrzující e-mail."
+    resend confirmation title: "Nedostali jste váš potvrzovací e-mail?"
+    resend confirmation copy: "Vložte zde níže e-mailovou adresu, kterou jste použili k registrování a my vám zašleme jiný potvrzující e-mail."
     resend confirmation button: "Znovu zaslat potvrzení"
     privacy:
       policy: "Ochrana soukromí %{youversion} "
@@ -355,7 +366,7 @@ cs:
       country: "Země nebo kraj"
       timezone: "Časové pásmo"
       language: "Jazyk"
-      updated: "Úspěšně jste aktualizoval/a váš profil!"
+      updated: "Úspěšně jste aktualizovali váš profil!"
       error: "Omlouváme se, vyskytla se chyba během aktualizace vašeho profilu."
       current password: "Současné heslo"
       new password: "Nové heslo"
@@ -367,16 +378,16 @@ cs:
       picture_too_large: "Obrázek musí mít méně než 1MB"
       picture_invalid_type: "Obrázek musí být JPG, PNG nebo GIF"
       picture_creation form errors: "Následující chyby zabránily aktualizaci vašeho obrázku:"
-      updated picture: "Úspěšně jste aktualizoval/a vaši fotku!"
-      updated notifications: "Úspěšně jste aktualizoval/a vaše nastavení upozorňování!"
+      updated picture: "Úspěšně jste aktualizovali vaši fotku!"
+      updated notifications: "Úspěšně jste aktualizovali vaše nastavení upozorňování!"
       notifications token error: "Neplatný token, prosím přihlašte se a změňte vaše nastavení upozorňování."
       notification errors: "Následující chyby zabránily aktualizování vašich upozornění:"
       edit: "Upravit"
       bio: "Životopis"
     password:
-      updated: "Úspěšně jste aktualizoval/a vaše heslo!"
+      updated: "Úspěšně jste aktualizovali vaše heslo!"
       error: "Omlouváme se, vyskytla se chyba během změny vašeho hesla."
-      old was invalid: "Omlouváme se, musíte zadat své staré heslo, abyste mohl/a změnit vaše heslo."
+      old was invalid: "Omlouváme se, musíte zadat své staré heslo, abyste mohli změnit vaše heslo."
     notifications:
       badges: "Upozornit mě na odznaky, které jsem získal/a."
       follower: "Upozornit mě na to, když mě někdo následuje."
@@ -395,7 +406,7 @@ cs:
     all: "Vše"
     labels label: "Štítky:"
     title: "Záložky"
-    not found: "Záložky vám dají rychlý přehled vašich oblíbených pasáží nebo poslední kapitolu, kterou jste četl/a v dané knize. Pro přidání záložky zvolte verš v prohlížení Bible a klikněte na tlačítko v horní části prohlížeče."
+    not found: "Záložky vám dají rychlý přehled vašich oblíbených pasáží nebo poslední kapitolu, kterou jste četli v dané knize. Pro přidání záložky zvolte verš v prohlížení Bible a klikněte na tlačítko v horní části prohlížeče."
     other user not found: "Uživatel %{username} zatím neuložil žádné záložky."
     creation form errors: "Následující chyby neumožnily vytvořit záložku:"
     successfully created: "Přidána záložka"
@@ -441,7 +452,7 @@ cs:
     success blurb: "Plány čtení jsou tím nejlepším způsobem jak učinit Boží Slovo součástí vašeho každodenního života."
     success blog link title: "Číst příspěvky z blogu"
     a users plans: "Plány uživatele %{username}"
-    you have no plans: "Právě nejste přihlášen/a k žádnému plánu čtení."
+    you have no plans: "Právě nejste přihlášeni k žádnému plánu čtení."
     no public plans: "Žádné viditelné plány uživatele %{username}."
     filter by lang: "Filtrovat plány čtení podle jazyků"
     plan settings: "Nastavení plánu"
@@ -492,8 +503,8 @@ cs:
     add members placeholder: "Jméno člena YouVersion"
     add member: "Přidat"
     email edit: "Upravit"
-    unsubscribe successful: "Odhlásil/a jste se od tohoto plánu."
-    already subscribed: "K tomuto plánu jste již přihlášen/a!"
+    unsubscribe successful: "Odhlásili jste se od tohoto plánu."
+    already subscribed: "K tomuto plánu jste již přihlášeni!"
     partner added successful: "Úspěch! %{username} byl přidán k plánu sledování vykazatelnosti čtení."
     partner removed successful: "%{username} byl odstraněn z plánu sledování vykazatelnosti čtení."
     make public successful: "Úspěch! Váš plán je veřejný."
@@ -510,7 +521,7 @@ cs:
     subscribe successful: "Skvěle! Přihlásili jste se k tomuto plánu."
     day number: "Den %{day}"
     which day in plan: "Den %{day} z %{total}"
-    must start to complete: "Aby jste mohl/a uložit přečtený úsek, je zapotřebí spustit tento plán čtení!"
+    must start to complete: "Aby jste mohli uložit přečtený úsek, je zapotřebí spustit tento plán čtení!"
     invalid reference: "Promiňte, ale v tomto vybraném překladu se zřejmě nenachází odkaz na tento verš. Vyzkoušejte vybrat jiný překlad, viz nahoře. Pokud se vám tato zpráva opět zobrazí , prosím informujte náš <a href='%{support_url}'>tým podpory</a> o tomto problému."
     sidebar notice: "Prohlížíte si plán čtení."
     completed notice: "Gratulujeme! Dokončili jste váš plán čtení."
@@ -566,7 +577,7 @@ cs:
     suggestion html: "Mysleli jste %{suggestion_link}?"
     all versions: "Všechny překlady v jazyce: %{language_name}"
   donate:
-    donate now: "Přispějte právě teď (pouze z USA)"
+    donate now: "Darovat nyní"
     donate now intl: "nebo darujte mezinárodně"
     promo 1: "Za každý věnovaný dolar získá 10 lidí přístup k Bibli na svém mobilu. "
     promo 2: "S YouVersion je Bible vždy po ruce. Podívejte se na naše video."
@@ -574,7 +585,6 @@ cs:
     headline: "Každý potřebuje Boží Slovo."
     subhead: "Pomozte lidem z celého světa, aby mohli mít Bibli na dosah prstů."
     copy: "Představte si, že byste mohli dát každému na světě Bibli zdarma. Můžete to udělat, pokud podpoříte svým příspěvkem Youversion. Žijeme v době, o které se ostatním jenom zdálo &ndash; kdy kdokoli s telefonem má přístup k Bibli a může zažít příběh Boží lásky k nám. S vaší podporou můžeme dále pomáhat více lidem trávit více času v Písmu."
-    amount: "Velikost daru (USD)"
     name: "Vaše jméno"
     card number: "Číslo bankovní karty"
     card exp date: "Datum expirace (MMRR)"
