--- a/config/locales/mk.yml
+++ b/config/locales/mk.yml
@@ -1,8 +1,18 @@
 mk:
   social:
-    email: "Е-пошта"
-    twitter: "Twitter"
-    facebook: "Facebook"
+    my connections: "Поврзани профили"
+    connected as: "Поврзани сте со %{connection} како %{username}."
+    remove connection: "Отстрани"
+    connection friends: "Еве неколку YouVersion корисници со кои си поврзан на %{connection}."
+    errors:
+      no friends: "Никој од твоите %{connection} пријатели не е на YouVersion."
+      reset connection: "Грешка при конекцијата. Ве молиме отстранете и реконектирајте ја конекцијата."
+    email:
+      name: "Е-пошта"
+    twitter:
+      name: "Twitter"
+    facebook:
+      name: "Facebook"
   api:
     users agree bool: "Мора да се согласите со Условите за користење за да се претплатите."
     users confirm password matches: "Лозинките не се совпаѓаат."
@@ -26,6 +36,9 @@ mk:
     mobile:
       title: "Апликација „Библија“"
       description: "Десетици милиони луѓе ја користат апликацијата „Библија“ да го читаат, слушаат, гледаат и споделуваат Светото писмо, правејќи го дел од секојдневието. Преземете ја бесплатната апликација и пристапете на вашите обележувачи, белешки и планови за читање во секое време, на секое место. Уживајте во стотици различни верзии, вклучувајќи и аудио верзии - сето тоа на вашиот мобилен уред."
+    connections:
+      index:
+        title: "Поврзани профили"
   now: "Сега"
   celebrating 50MM: "Славиме 50 Милиони инсталирани апликации!"
   link: "Врска"
@@ -42,8 +55,6 @@ mk:
   copy: "Копирај"
   copy confirmed: "Копирано!"
   new note: "Нова белешка"
-  twitter: "Twitter"
-  facebook: "Facebook"
   share success: "Ја сподели пораката."
   share error: "Имаше проблем при споделување на твојата порака. Обиди се повторно."
   google plus: "Google +"
@@ -566,7 +577,7 @@ mk:
     suggestion html: "Дали мислиш на %{suggestion_link}?"
     all versions: "Сите %{language_name} верзии"
   donate:
-    donate now: "Донирај сега (САД)"
+    donate now: "Донирај сега"
     donate now intl: "или донирај меѓунардно"
     promo 1: "За секој $1, уште 10 луѓе можат да добијат пристап до Библијата на своите мобилни телефони."
     promo 2: "Со YouVersion, Библијата е секогаш покрај тебе. Погледни го видеото."
@@ -574,7 +585,6 @@ mk:
     headline: "Секому му е потребен Божјиот збор."
     subhead: "Помогни им на луѓето ширум светот да ја имаат Библијата во своите раце."
     copy: "Замисли да можеш секому во светот да дадеш Библија бесплатно. Кога даваш на YouVersion, го правиш токму тоа. Ние сме активни дури и кога другите само сонуваат за &ndash; кога секој со телефон има пристап до Библијата и се запознава со приказната за Божјата љубов кон нас. Со твојата поддршка, можеме да продолжиме да помагаме повеќе луѓе да поминуваат повеќе време со Писмото."
-    amount: "Висина на донација (USD)"
     name: "Твоето име"
     card number: "Број на кредитна картичка"
     card exp date: "Трае до: (MMYY)"
