--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -1,8 +1,20 @@
 ru:
   social:
-    email: "Email"
-    twitter: "Twitter"
-    facebook: "Facebook"
+    my connections: "Подключенные аккаунты"
+    connected as: "Вы подключены к %{connection} как %{username}."
+    remove connection: "Удалить"
+    connection friends: "Вот несколько пользователей YouVersion, с кем вы общаетесь в %{connection}:"
+    errors:
+      no friends: "Ваших друзей по %{connection} пока нет на YouVersion."
+      reset connection: "Извините, произошла ошибка. Пожалуйста, удалите соединение и установите его заново."
+    email:
+      name: "Email"
+    twitter:
+      name: "Twitter"
+    facebook:
+      name: "Facebook"
+      errors:
+        expired access: "Доступ к вашему профилю Facebook истёк. Пожалуйста, удалите соединение с Facebook и установите его заново."
   api:
     users agree bool: "Чтобы создать аккаунт, вы должны согласиться с Условиями обслуживания."
     users confirm password matches: "Новые пароли не совпадают."
@@ -26,6 +38,9 @@ ru:
     mobile:
       title: "Приложение Библия"
       description: "Десятки миллионов людей пользуются приложением Библия, чтобы читать, слушать, смотреть и делиться Словом Божьим, и делать его частью своей ежедневной жизни. Установите бесплатное приложение и получите доступ к своим закладкам, заметкам и планам чтения с любого устройства. Читайте Библию в сотнях переводов, слушайте аудио версии прямо со своего мобильного устройства."
+    connections:
+      index:
+        title: "Подключенные аккаунты"
   now: "Сейчас"
   celebrating 50MM: "Отмечаем 50 миллионов установок!"
   link: "Ссылка"
@@ -42,8 +57,6 @@ ru:
   copy: "Копировать"
   copy confirmed: "Скопировано!"
   new note: "Создать заметку"
-  twitter: "Twitter"
-  facebook: "Facebook"
   share success: "Ваше сообщение было опубликовано."
   share error: "Извините, при публикации Вашего сообщения произошла ошибка. Пожалуйста, попробуйте ещё раз."
   google plus: "Google+"
@@ -566,7 +579,7 @@ ru:
     suggestion html: "Вы имели в виду %{suggestion_link}?"
     all versions: "Все переводы на %{language_name}"
   donate:
-    donate now: "Пожертвование (США)"
+    donate now: "Отправить пожертвование"
     donate now intl: "или через PayPal (др. страны)"
     promo 1: "Каждый пожертвованный Вами доллар поможет 10-и людям получить Библию на мобильное устройство."
     promo 2: "С YouVersion Библия всегда рядом. Посмотреть видео."
@@ -574,7 +587,10 @@ ru:
     headline: "Всем необходимо Слово Божие."
     subhead: "Помогите людям по всему миру получить доступ к Библии."
     copy: "Представьте, что Вы могли бы дать каждому человеку в мире бесплатную Библию. Жертвуя в пользу YouVersion, Вы способствуете именно этому. Мы живём в то время, о котором другие могли только мечтать — когда любой из нас, имея мобильный телефон, может легко получить доступ к Библии и познакомиться с историей любви Бога к нам."
-    amount: "Сумма пожертвования (USD)"
+    amount: "Сумма пожертвования"
+    option once: "Единовременное"
+    option monthly: "Ежемесячное"
+    alert empty amount: "Пожалуйста, введите сумму пожертвования"
     name: "Ваше имя"
     card number: "Номер кредитной карты"
     card exp date: "Срок действия (ММГГ)"
