--- a/config/locales/ta.yml
+++ b/config/locales/ta.yml
@@ -1,8 +1,38 @@
 ta:
   social:
-    email: "மின்னஞ்சல்"
-    twitter: "Twitter"
-    facebook: "Facebook"
+    my connections: "இணைக்கப்பட்டுள்ள கணக்குகள்"
+    connected as: "நீங்கள் %{connection} -யுடன் %{username} என இணைக்கப்பட்டுள்ளீர்கள்."
+    remove connection: "நீக்கவும்"
+    connection friends: "இங்கு, நீங்கள் இணைத்துள்ள %{connection} உடன் சில YouVersion பயனாளர்கள் இருக்கிறார்கள்."
+    errors:
+      no friends: "உங்கள் %{connection} நண்பர்கள் யாரும்  YouVersion -ல் இருப்பதாக இன்னும் தோன்றவில்லை."
+      reset connection: "மன்னிக்கவும், பிழை ஏற்பட்டுள்ளது.  இந்த இணைப்பை நீக்கி, பின்னர் மீண்டும் இணைத்து பார்க்கவும். "
+    email:
+      name: "மின்னஞ்சல்"
+    twitter:
+      name: "Twitter"
+    facebook:
+      name: "Facebook"
+  api:
+    users agree bool: "ஒரு கணக்கை உருவாக்க நீங்கள் விதிமுறைகள் மற்றும் நிபந்தனைகளுக்கு ஒப்புக்கொள்ள வேண்டும்."
+    users confirm password matches: "புதிய கடவுச்சொற்கள் பொருந்தவில்லை."
+    users email email: "மின்னஞ்சல் முகவரி தவறானது"
+    users email email rfc: "நீங்கள் தந்த மின்னஞ்சல் முகவரி தவறானது."
+    users email not available: "இந்த மின்னஞ்சல் முகவரியை வைத்து ஏற்கனவே ஒரு கணக்கு பதிவு செய்யப்பட்டிருக்கிறது "
+    users email not found: "அந்த மின்னஞ்சல் முகவரிக்கு கணக்கு எதுவும் இல்லை."
+    users email required: "நீங்கள் ஒரு மின்னஞ்சல் முகவரியை உள்ளிட வேண்டும்."
+    users hash verified: "இந்த account ஏற்கனவே உறுதிப்படுத்தப் பட்டுவிட்டது! "
+    users password change: "உங்கள் புதிய கடவுச்சொல் உங்களுடைய  பழைய கடவுச்சொல்லிலிருந்து  வேறுபட்டதாக இருக்க வேண்டும்."
+    users password length: "உங்கள் கடவுச்சொல் குறைந்தது 6 எழுத்துகள் உள்ளதாக இருக்க வேண்டும்."
+    users password required: "நீங்கள் ஒரு கடவுச்சொல்லை உள்ளிட வேண்டும்."
+    users username alpha numeric extra: "பயனர்பெயர் எழுத்துகள், எண்கள், அல்லது சிறுகோடுகள் உள்ளதாக இருக்க வேண்டும்."
+    users username not available: "நீங்கள் அளித்த பயனர்பெயர் கிடைக்காதது"
+    users username or password invalid: "நீங்கள் அளித்த பயனர் பெயரோ  அல்லது கடவுச்சொல்லோ தவறானது."
+    users username required: "நீங்கள் ஒரு பயனர் பெயரை உள்ளிட வேண்டும்."
+  meta:
+    connections:
+      index:
+        title: "இணைக்கப்பட்டுள்ள கணக்குகள்"
   now: "இப்பொழுது"
   celebrating 50MM: "50 மில்லியன் பயன்பாடு நிறுவல்களை கொண்டாடுகிறது!"
   link: "தொடர்பு "
@@ -19,8 +49,6 @@ ta:
   copy: "பகர்ப்பு"
   copy confirmed: "பகர்க்கப்பட்டது!"
   new note: "ஒரு குறிப்பை உருவாக்குக"
-  twitter: "Twitter"
-  facebook: "Facebook"
   share success: "உங்கள் செய்தி பகிர்ந்து கொள்ள பட்டிருக்கிறது."
   share error: "மன்னிக்கவும், உங்கள் செய்தியை பகிர்ந்து கொள்வதில் பிழை ஏற்பட்டிருக்கிறது. மீண்டும் முயற்சிக்கவும்."
   google plus: "Google +"
@@ -95,6 +123,7 @@ ta:
   chapter: "அதிகாரம்"
   bible: "வேதாகமம்"
   notes title: "குறிப்புகள்"
+  videos: "வீடியோக்கள்"
   friends: "நண்பர்கள்"
   groups: "குழுக்கள்"
   mobile: "மொபைல்"
@@ -197,6 +226,7 @@ ta:
     other user profile: "%{username} - இன் சுயவிபரம்"
     my password: "என் கடவுச்சொல்லை மாற்றவும்"
     edit password: "கடவுச்சொல்லை மாற்றவும்  "
+    edit password errors: "பின்வரும் பிழை (கள்) உங்கள் கடவுச்சொல் மாற்றத்தை தடுத்து விட்டது:"
     picture: "படம்"
     edit picture: "படத்தை மாற்றவும்"
     edit notifications: "அறிவிப்புகளை நிர்வகிக்கவும்"
@@ -486,6 +516,26 @@ ta:
     must start to complete: "முடிக்கப்பட்ட வாசிப்புகளை சேமிக்க இந்த திட்டத்தை தொடங்கவும்!"
     invalid reference: "மன்னிக்கவும், வசன குறிப்புகளில் ஒன்று இந்த வாசிப்புக்கு   தேர்ந்தெடுக்கப்பட்ட பதிப்பில் இல்லை. மேலே, ஒரு வேறுபட்ட பதிப்பை தேர்ந்தெடுத்து முயற்சிக்கவும்  . இந்த செய்தியை நீங்கள் தொடர்ந்து பார்த்தால், தயவு செய்து எங்கள் <a href='%{support_url}'>உதவி குழு</a> இந்த பிரச்சினை பற்றி எங்கள்  தெரிவிக்கவும்."
     sidebar notice: "நீங்கள் ஒரு வாசிப்பு திட்டத்தை பார்த்து கொண்டிருக்கிறீர்கள்."
+    completed notice: "வாழ்த்துகள்! உங்கள் வாசிப்பு திட்டத்தை முடித்து விட்டீர்கள். "
+    exit: "வெளியேற"
+    loading sidebar content: "பக்கப்பட்டியின் உள்ளடக்கத்தை ஏற்றிகொண்டிருக்ககிறது ..."
+  licenses:
+    authorized:
+      heading: "உங்களின்  தகவல்கள் அங்கீகரிக்கப் பட்ருக்கிறது "
+      description: "நீங்கள் YouVersion  னில் %{vendor} இருந்து வாங்கிய பொருட்களை <a href='%{content_link}'> இப்போது பார்க்கலாம்!"
+    has errors: "உங்கள் கோரிக்கையில்  தவறுகள் உள்ளன:"
+    confirm:
+      email: "நீங்கள் வாங்கிய வீடியோவை உறுதி செய்ய, உங்கள் மின்னஞ்சல் பெட்டியில், YouVersion னிலிருந்து வந்துள்ள உறுதிப்படுத்தல் மின்னஞ்சலை பார்த்து அதில் உள்ளே இணைப்பை கிளிக் செய்க."
+    request:
+      invalid_vendor_signature: "உரிமம் சரிபார்த்தல் தோல்வியடைந்தது: தவறான விற்பனையாளர் கையெழுத்து"
+      invalid_vendor_id: "உரிமம் சரிபார்த்தல் தோல்வியடைந்தது: தவறான விற்பனையாளர் ID"
+      invalid_item_ids: "உரிமம் சரிபார்த்தல் தோல்வியடைந்தது: தவறான பொருட்கள்"
+    vendor_transaction_id:
+      duplicate: "பரிவர்த்தனை ID: இந்த பரிவர்த்தனை ID ஏற்கனவே பதிவு செய்ய பட்டிருக்கிறது "
+    auth:
+      login notice: "நீங்கள் வாங்கிய பொருளை உறுதி செய்ய, கீழே உள்ள உங்கள் YouVersion கணக்கில் உள்நுழைக அல்லது  <a href='/sign-up?source=licenses'>%{பதிவு செய்க}</a>."
+      signup notice: "நீங்கள் வாங்கிய பொருளை உறுதி செய்ய, ஒரு இலவச YouVersion கணக்கிற்கு கீழே பதிவு செய்க அல்லது உங்களுக்கு  ஏற்கனவே ஒரு கணக்கு இருந்தால். <a href='/sign-in?source=licenses'>%{உள்நுழைக}</a>"
+      signup link text: "ஒரு இலவச கணக்கிற்கு பதிவு செய்க "
   registration:
     placeholder:
       email: "உங்கள் மின்னஞ்சல் முகவரியை உள்ளிடவும்"
@@ -518,7 +568,7 @@ ta:
     suggestion html: "நீங்கள் கருதியதா %{suggestion_link}?"
     all versions: "அனைத்து %{language_name} பதிப்புகள்"
   donate:
-    donate now: "இப்போது நன்கொடை செய்க (US)"
+    donate now: "இப்போது நன்கொடை செய்க"
     donate now intl: "அல்லது சர்வதேச அளவில் நன்கொடை செய்க "
     promo 1: "நீங்கள் கொடுக்கும்  ஒவ்வொரு $1 க்கும், மேலும் 10 பேர் தங்கள் மொபைல் போனில் பைபிளை அணுகும் வசதியை பெறுகிறார்கள்."
     promo 2: "YouVersion மூலம், பைபிள் எப்போதும் அருகிலேயே உள்ளது. எங்களின்  வீடியோவை பார்க்கவும்."
@@ -526,7 +576,6 @@ ta:
     headline: "தேவனின் வார்த்தைஅனைவருக்கும்  தேவைப்படுகிறது. "
     subhead: "உலகம் முழுவதுமுள்ள  மக்கள் தங்களின் விரல் நுனியில் பைபிளை பெற்றிருக்க உதவுங்கள்."
     copy: "உங்களால்  உலகிலுள்ள  அனைவருக்கும் இலவச பைபிள் கொடுக்க முடியும் என்று கற்பனை செய்து பாருங்கள். நீங்கள் YouVersion -க்கு கொடுக்க போது,  உங்களால் அதை செய்ய முடியும். மற்றவர்கள் கனவில் மட்டுமே கண்டிருந்த ஒரு காலத்தில் நாம் உயிரோடு இருக்கிறோம் &ndash; தொலைபேசி உள்ள யாரும் பைபிளை அணுகவும்  தேவனுக்கு நம் மீதுள்ள அன்பின் கதையை அனுபவிக்கவும் முடியும்.  இன்னும் அதிகம் மக்கள் வசனத்தில் அதிக நேரம் செலவிட உதவுவதை உங்கள் ஆதரவுடன் தொடரலாம்."
-    amount: "நன்கொடை தொகை (USD)"
     name: "உங்கள் பெயர்"
     card number: "கடன் அட்டை எண்"
     card exp date: "காலாவதியாகும் தேதி (MMYY)"
@@ -660,6 +709,7 @@ ta:
       translation notes: "அடிக்குறிப்புகள்"
       cross references: "தொடர்புக் குறிப்புகள்"
   app errors:
+    404 plans explanation: "நீங்கள் <a href='%{plan_path}'>% {தலைப்பு} </ p> திட்டம் தேடுகிறீர்களா? "
     404 explanation: "நீங்கள் <a href='%{reader_path}'> home page</ a> மீண்டும் தொடங்க  முயற்சி செய்யலாம் . இப்பொழுதும் சிக்கல் உள்ளதா? எங்கள் <a href='%{support_url}'> உதவி குழு </ a> தொடர்பு கொள்க."
     404 message: "மன்னிக்கவும், நீங்கள் தேடும் பக்கம் இல்லை."
     408 message: "துரதிருஷ்டவசமாக, எங்கள் சேவையகங்கள்   சரியான நேரத்தில் பதிலளிக்கவில்லை."
