--- a/config/locales/uk.yml
+++ b/config/locales/uk.yml
@@ -1,8 +1,20 @@
 uk:
   social:
-    email: "Ел.пошта"
-    twitter: "Твіттер"
-    facebook: "Фейсбук"
+    my connections: "Приєднані профілі"
+    connected as: "Ви приєднали %{connection} як %{username}."
+    remove connection: "Видалити"
+    connection friends: "Користувачі YouVersion, з якими ви знайомі через %{connection}:"
+    errors:
+      no friends: "Ваших друзів із % {connection} поки що немає на YouVersion."
+      reset connection: "Вибачте, виникла помилка. Будь ласка, вилучіть підключення та підключіть його знову."
+    email:
+      name: "Ел.пошта"
+    twitter:
+      name: "Twitter"
+    facebook:
+      name: "Facebook"
+      errors:
+        expired access: "Ваш час доступу вже минув на Facebook. Будь ласка, вилучіть ваше підключення і знову підключіться до Facebook."
   api:
     users agree bool: "Вам необхідно погодитися з умовами та правилами для створення облікового запису."
     users confirm password matches: "Нові паролі не збігаються."
@@ -26,6 +38,9 @@ uk:
     mobile:
       title: "Програма Біблія"
       description: "Десятки мільйонів людей використовують програму Біблія, щоб читати, слухати, дивитися та ділитися Словом Божим, роблячи його частиною свого повсякденного життя. Завантажте безкоштовну програму і отримайте доступ до закладок, нотаток і планів читання з будь-якої точки світу. Насолоджуйтесь сотнями перекладів, в тому числі аудіобіблією, - і все за допомогою свого мобільного пристрою."
+    connections:
+      index:
+        title: "Приєднані профілі"
   now: "Зараз"
   celebrating 50MM: "Святкуємо 50 мільйонів встановлень!"
   link: "Посилання"
@@ -42,8 +57,6 @@ uk:
   copy: "Копіювати"
   copy confirmed: "Скопійовано!"
   new note: "Нова нотатка"
-  twitter: "Twitter"
-  facebook: "Facebook"
   share success: "Повідомлення розіслано іншим."
   share error: "Вибачте, сталась помилка в розсиланні вашого повідомлення. Будь-ласка спробуйте знову."
   google plus: "Google +"
@@ -540,9 +553,9 @@ uk:
       username: "Введіть своє ім'я користувача"
       password: "Введіть свій пароль"
     with email: "Зареєструйтеся через свою електронну пошту"
-    with facebook: "Зареєструйтеся через Facebook"
+    with facebook: "Зареєструватися через Facebook"
     benefits title: "Отримайте Усі можливості"
-    benefits blurb: "Створення облікового запису дає вам доступ до інших засобів таких як закладки і нотатки. Вони будуть доступні на будь-якому пристрої, де ви зареєстровані. Обліковий запис спрощує вам спілкування з друзями стосовно Біблії, отже приділіть хвилинку і зареєструйтеся!"
+    benefits blurb: "Створення облікового запису дає вам доступ до інших засобів таких як закладки і нотатки. Вони будуть доступні на будь-якому пристрої, де ви увійшли у свій профіль. Обліковий запис спрощує вам спілкування з друзями стосовно Біблії, отже, приділіть хвилинку і зареєструйтеся!"
     plan blurb: "Схоже ви хочете розпочати читання за Планом. Чудово! Плани допомагають зробити Біблію частиною щоденного життя. Підпишіться або створіть обліковий запис і розпочинайте!"
     bookmark blurb: "Здається, ви хочете використати закладку. Чудово! Закладки допомагають відстежити вірші, що ви плануєте завчити, поділитись, або позначити як улюблені. Підпишіться або створіть власний обліковий запис нижче та розпочинайте! "
     friends blurb: "Здається, ви хочете контактувати з Друзями. Хороша ідея! Ви зможете поділитися тим, що вивчаєте і допомогти іншим притримуватись плану читання. Підпишіться або створіть обліковий запис та розпочинайте!"
@@ -566,7 +579,7 @@ uk:
     suggestion html: "Чи мали ви на увазі %{suggestion_link}?"
     all versions: "Всі %{language_name} Версії"
   donate:
-    donate now: "Пожертвувати (США)"
+    donate now: "Пожертвувати"
     donate now intl: "або через PayPal (інші країни)"
     promo 1: "За кожен $1 даний вами ще 10 чоловік отримають доступ до Біблії на своєму мобільному телефоні. "
     promo 2: "З YouVersion, Біблія завжди поруч. Подивіться наше відео."
@@ -574,7 +587,10 @@ uk:
     headline: "Кожен має потребу в Слові Божому."
     subhead: "Допожіть людям у всьому світі мати Біблію."
     copy: "Уявіть, що ви могли б дати всім в світі безкоштовні Біблії. Коли ви жертвуєте YouVersion, то ви можете зробити саме це. Ми живемо протягом часу,  про який інші могли тільки мріяти - коли будь-яка людина з телефоном може отримати доступ до Біблії і пізнати історію любові Бога до нас. З вашою підтримкою ми можемо продовжувати  допомагати більшій кількості людей проводити більше часу з Писанням."
-    amount: "Cума пожертвування"
+    amount: "Cума пожертви"
+    option once: "Один раз"
+    option monthly: "Щомісяця"
+    alert empty amount: "Будь ласка, введіть суму пожертви."
     name: "Ім'я"
     card number: "Номер карточки"
     card exp date: "Термін дії (ММРР)"
@@ -593,8 +609,8 @@ uk:
   download ad:
     title: "Завантажте безкоштовну програму Біблії"
     line 1: "Сотні перекладів на 100+"
-    line 2: "різних мов - Біблія"
-    line 3: "Це йде з Вами куди завгодно."
+    line 2: "різних мов - це все Біблія"
+    line 3: "що всюди прямує з вами."
     download: "Завантажити зараз"
   about page:
     relevancy: "Релевантність"
@@ -669,7 +685,7 @@ uk:
       hero:
         heading: "Безкоштовна Біблія на вашому телефоні, планшеті чи комп'ютері."
         description: "YouVersion це проста Біблія без реклами, що приносить Боже Слово у ваше щоденне життя."
-        learn more: "дізнайся більше нижче"
+        learn more: "дізнайтеся подробиці нижче"
         start reading: "Почати читання"
         skip in future: "Пропустити цю сторінку в майбутньому"
         now skipped: "Ця сторінка буде пропускатися."
@@ -677,7 +693,7 @@ uk:
         read heading: "Читайте Біблію."
         read description: "Візьміть свій вибір з  <strong>сотень версій Біблії та мов</strong>. Безпосередньо порівнюйте дві версії. Ви навіть можете вибрати шрифт і розмір екрану. Налаштуйте як вам до вподоби ваше пізнання онлайн Біблії."
         study heading: "Вивчайте Біблію."
-        study description: "<strong>Виділяйте</strong> вашим улюбленим кольором, <strong>закладайте</strong> ваші улюблені вірші з Біблії і робіть нотатки про те, що ви вивчаєте. Ви не тільки проводити час з Словом Божим, ви створюєте історію вашої взаємодії з Біблією."
+        study description: "<strong>Виділяйте</strong> вашим улюбленим кольором, <strong>закладайте</strong> ваші улюблені вірші з Біблії і робіть нотатки про те, що ви вивчаєте. Ви не тільки проводите час з Словом Божим, ви створюєте історію вашої взаємодії з Біблією."
         subscribe heading: "Підпишіться на Біблійні Плани."
         subscribe description: "Посильте всю Біблію, зосередьтеся на темі, або читайте за напрямком заданим талановитим вчителем. Виберіть свій план і щодня ви знайдете частинку Біблію, яка чекатиме на вас."
         download heading: "Візьміть Біблію з собою."
