--- a/config/locales/hi.yml
+++ b/config/locales/hi.yml
@@ -1,8 +1,18 @@
 hi:
   social:
-    email: "इमेल"
-    twitter: "ट्विट्टर "
-    facebook: "फेसबुक "
+    my connections: "कनेक्टेड अकाउंट"
+    connected as: "आप %{connection} से %{username}द्वारा कनेक्टड हैं| "
+    remove connection: "हटाइए "
+    connection friends: "कुछ और YouVersion लाभ करता से संपर्क सादे %{connection}"
+    errors:
+      no friends: "आपके मित्र%{connection }YouVersion में प्रत्यक्ष नहीं हुए हैं |"
+      reset connection: "कृपया त्रुटी के लिए क्षमा कीजिए|इस कनेक्शन को हटाकर पुन: कंनेक्ट करे|"
+    email:
+      name: "इमेल"
+    twitter:
+      name: "ट्विट्टर "
+    facebook:
+      name: "फेसबुक "
   api:
     users agree bool: "अकाउंट निर्माण हेतु उपयोग के नियमों और शर्तों से सहमत होना अनिवार्य हैं।"
     users confirm password matches: "नए पासवर्ड एक दूसरे से मेल नहीं खातें हैं ।"
@@ -26,6 +36,9 @@ hi:
     mobile:
       title: "बाइबिल App"
       description: "लाखों,करोड़ों लोगों द्वारा उपयुक्त इस बाइबिल App को अपने नित्य जीवन का अंग बनाये और प्रभु के वचन का अध्ययन करे।निशुल्क बाइबिल App   डाउनलोड करें, और बुकमार्क्स, टिप्पणी, पाठक योजना दुनिया भर में कहीं से भी ऐक्सेस करे।"
+    connections:
+      index:
+        title: "कनेक्टेड अकाउंट"
   now: "अभी "
   celebrating 50MM: "50 मिलियन app स्थापना उत्सव!"
   link: "लिंक"
@@ -42,8 +55,6 @@ hi:
   copy: "कॉपी"
   copy confirmed: "कॉपी हुआ "
   new note: "नई टिप्पणी "
-  twitter: "ट्विट्टर"
-  facebook: "फेसबुक"
   share success: "आपके संदेश को शेयर किया गया हैं।"
   share error: "आपके संदेश को शेयर करने में कठिनाई हैं। पुन: कोशिश कीजिए।"
   google plus: "google+"
@@ -565,7 +576,7 @@ hi:
     suggestion html: "क्या आप यह लिंक चाहते हैं %{suggestion_link}?"
     all versions: "पूरा%{language_name} संस्करण"
   donate:
-    donate now: "अभी योगदान करिए (US)"
+    donate now: "अभी योगदान कीजिए"
     donate now intl: "अथवा अन्तराष्ट्रीय योगदान कीजिए"
     promo 1: "आपके $1 के योगदान से 10 लोग बाइबिल का लाभ मोबाइल पर उठा सकते हैं।"
     promo 2: "YouVersion से बाइबिल हमेशा आपके करीब हैं। विडियो देखिये।"
@@ -573,7 +584,10 @@ hi:
     headline: "सब को प्रभु के वचन की जरूरत हैं।"
     subhead: "दुनिया भर के लोगो को बाइबिल उनके उँगलियों पर उपलब्ध कराने में मदद कीजिए|।"
     copy: "कल्पना  कीजिये की आप दुनियाभर में  हर एक व्यक्ति को मुफ्त बाइबिल दे सकते हैं। YouVersion में योगदान करके  आप वही कर रहे हैं ।हम  एक ऐसे समय में जीवित हैं जो दूसरो ने  केवल खवाबों और खयालों में सोचा होगा। जब हर एक मोबाइल फ़ोन उपभोगता बाइबिल अपने फ़ोन पर access कर प्रभु का अद्भुत प्यार की कहानी अनुभव कर सकता हैं। आप के मदद से हम अधिक से अधिक लोग इस सुविधा का लाभ उठा सके यह प्रयत्न जारी रख सकते हैं।"
-    amount: "दान की रकम (USD)"
+    amount: "योगदान राशी "
+    option once: "एक मर्तबा "
+    option monthly: "मासिक "
+    alert empty amount: "कृपया योगदान की राशी इंटर करे। "
     name: "आपका नाम "
     card number: "क्रेडिट कार्ड नंबर "
     card exp date: "समाप्ति की तारीख(MMYY)"
@@ -750,6 +764,7 @@ hi:
           subject: "क्या आपके पास बाइबिल App है?"
           body: "मैं YouVersion के बाइबिल App का आनंद ले रहा हूँ और सोचा की आपको भी अच्छा लगेगा। मैं आजकल बाइबिल बहुत खोल रहा हु क्योंकि उसे पढना, देखना, सुनना और बाँटना बहुत आसान हैं। इसमें पाठक योजनाए भी हैं जिसे  बाइबिल के पद्यो को चयनित कर निर्मित किया गया हैं। जिसका अध्ययन में हर रोज़ करता हूँ। \n\n यह आपको (निशुल्क) लगभग हर मोबाइल यन्त्र के लिए यहाँ पर उपलब्धित हैं: \n http://www.bible.com/app"
       body:
+        p1: "10 जुलाई एक बहुत बड़ा दिवस हैं।इस दिन हमारी 5 वर्षगाँठ के साथ apple स्टोर के शुभारंभ का 5 वा साल हैं।"
         p2: "केवल आपके मदद और सहयोग से हम 100 मिलियन डाउनलोड तक पहुँच सके।नए आँकड़े की और निरंतर प्रगती।"
         p3: "हमने सीखा प्रभु इस प्रकार के मील के पत्थर उपयुक्त कर नए विकास की अग्नि को हवा देते हैं।"
         p4: "आइये हम साथ मिलकर इतिहास की रचना करे।"
