--- a/config/locales/tl.yml
+++ b/config/locales/tl.yml
@@ -1,8 +1,18 @@
 tl:
   social:
-    email: "Email"
-    twitter: "Twitter"
-    facebook: "Facebook"
+    my connections: "Mga Kaugnay na Accounts"
+    connected as: "Ikaw ay nakakonek sa %{connection} bilang %{username}."
+    remove connection: "Alisin"
+    connection friends: "Sila ang mga YouVersion users na naka-connect sa iyo sa pamamagitan nang %{connection}:"
+    errors:
+      no friends: "Mukhang wala pa sa iyong %{connection} mga kaibigan ay nasa YouVersion sa kasalukuyan."
+      reset connection: "Paumanhin, nagkaroon ng pagkakamali. Paki-tanggal at muling i-konekta itong koneksyon. "
+    email:
+      name: "Email"
+    twitter:
+      name: "Twitter"
+    facebook:
+      name: "Facebook"
   api:
     users agree bool: "Kinakailangan ang iyong pagsang-ayon sa mga tuntunin at kundisyon upang makalikha ng account."
     users confirm password matches: "Ang bagong password ay hindi nagtutugma."
@@ -26,6 +36,9 @@ tl:
     mobile:
       title: "App ng Bibliya"
       description: "Milyun-milyong tao na ang gumagamit ng App ng Bibliya upang magbasa, makinig, manuod at magbahagi ng Salita ng Diyos, gawin itong bahagi ng kanilang pang-araw-araw na buhay.  I-download ang libreng app at subukan ang bookmark, notes, at plano ng pagbasa kahit saan. Mag-enjoy sa daan-daang bersyon, kasama ang audio, sa lahat ng mobile na kagamitan."
+    connections:
+      index:
+        title: "Mga Kaugnay na Accounts"
   now: "Ngayon"
   celebrating 50MM: "Ipinagdiriwang 50 Million App Installs! "
   link: "Link"
@@ -42,8 +55,6 @@ tl:
   copy: "Kopyahin"
   copy confirmed: "Nakopya na!"
   new note: "Lumikha ng Tala"
-  twitter: "Twitter"
-  facebook: "Facebook"
   share success: "Ang iyong mensahe ay nai-share na."
   share error: "Paumanhin, may pagkakamali sa pagshare ng iyong mensahe. Pakiulit po."
   google plus: "Google +"
@@ -566,7 +577,7 @@ tl:
     suggestion html: "Ibig mo bang sabihin ay %{suggestion_link}?"
     all versions: "Lahat ng %{language_name} Bersyon"
   donate:
-    donate now: "Magbigay ng Donasyon Ngayon (US)"
+    donate now: "Magbigay Donasyon Ngayon "
     donate now intl: "o magbigay ng international na donasyon "
     promo 1: "Sa bawat $1 na iyong ibibigay, 10 tao ang magkaka-access sa Bibliya sa kanilang mobile phone."
     promo 2: "Sa YouVersion, ang Bibliya ay laging malapit. Panooring ang video."
@@ -574,7 +585,6 @@ tl:
     headline: "Kailangan ng lahat ng Salita ng Diyos."
     subhead: "Tulungan ang mga tao sa buong mundo na magkaroon ng Bibliya."
     copy: "Isipin mong maaaring bigyan ang lahat ng tao sa mundo ng libreng Bibliya.  Ito ay magagawa mo kung magbibigay ka sa YouVersion. Tayo ay nasa panahon na napapanaginipan lamang ng iba &ndash; ang sinomang may telepono ay makaka-access ng Bibliya at makakaranas ng istorya ng pagmamahal ng Diyos sa atin. Dahil sa inyong suporta, tuluyan nating matutulungan ang mga taong mag-ukol ng panahon sa Kasulatan."
-    amount: "Halaga ng donasyon (USD)"
     name: "Pangalan"
     card number: "Credit card number"
     card exp date: "Petsa ng Expiration (MMYY)"
