--- a/config/locales/tr.yml
+++ b/config/locales/tr.yml
@@ -1,8 +1,18 @@
 tr:
   social:
-    email: "e-Posta"
-    twitter: "Twitter"
-    facebook: "Facebook"
+    my connections: "Bağlı Hesaplar"
+    connected as: "Siz %{username} olarak ${connection} ile bağlandınız."
+    remove connection: "Sil"
+    connection friends: "Sizinle aynı zamanda %{connection} servisinde ve YouVersion'da kayıtılı olan bazı kullanıcılar:"
+    errors:
+      no friends: "%{connection} sosyal ağındaki arkadaşlarınızın hiçbiri YouVersion'e kayıtlı değil."
+      reset connection: "Bir hata oluştu, özür dileriz. Lütfen bu bağlantıyı kesip yeniden bağlanın."
+    email:
+      name: "e-Posta"
+    twitter:
+      name: "Twitter"
+    facebook:
+      name: "Facebook"
   api:
     users agree bool: "Hesabı oluşturmak için şartlar ve koşulları kabul etmeliysiniz."
     users confirm password matches: "Yeni parolalar eşlemıyorlar."
@@ -26,6 +36,9 @@ tr:
     mobile:
       title: "Kutsal Kitap Uygulaması"
       description: "On milyonlarca insan Kutsal Kitap Uygulaması'nı kullanıyor ve Tanrı'nın Sözü'nü hayatlarının bir parçası haline getirdiler. Uygulamayı bedavaya indirip, her yerden yer imlerinize, notlarınıza ve okuma planlarınıza ulaşın. Mobil cihazınızı kullanarak Kutsal Kitap'ın yüzlerce çevirisini okuyun ve dinleyin."
+    connections:
+      index:
+        title: "Bağlı Hesaplar"
   now: "Şu Anki Durum"
   celebrating 50MM: "50 Milyon Uygulama İndirildi!"
   link: "Link"
@@ -42,8 +55,6 @@ tr:
   copy: "Kopyala"
   copy confirmed: "Kopyalandı!"
   new note: "Not Ekle"
-  twitter: "Twitter"
-  facebook: "Facebook"
   share success: "İletiniz paylaşıldı."
   share error: "İletinizi paylaşmaya çalışırken bir hata oluştu. Lütfen tekrar deneyiniz."
   google plus: "Google +"
@@ -566,7 +577,7 @@ tr:
     suggestion html: "Şunu mu kastettiniz? %{suggestion_link}"
     all versions: "%{language_name} Dilinde Tüm Çeviriler"
   donate:
-    donate now: "Bağışta Bulun (ABD)"
+    donate now: "Bağışta Bulun"
     donate now intl: "uluslararası bağış"
     promo 1: "Verdiğiniz her $1 on kişinin mobil cihazlarında Kutsal Kitap'ı okuyabilmelerini sağlar."
     promo 2: "YouVersion ile Kutsal Kitap hep yanınızdadır. Videoyu seyredin."
@@ -574,7 +585,6 @@ tr:
     headline: "Herkesin Tanrı’nın Sözüne ihtiyacı var!"
     subhead: "Dünya çapındaki insanların Kutsal Kitap’ı ellerin altında bulundurabilmelerine yardımcı olun."
     copy: "Dünyadaki her insana bir Kutsal Kitap vermek ister misiniz? YouVersion’a bağış verdiğinizde işte bunu yapmış olursunuz. Biz geçmiş çağların Hristiyanların hayal ettiği bir dönemde yaşıyoruz. Elinde cep telefonu olan herkes Kutsal Kitap’a erişip Tanrı’nın bize olan sevgisinin büyük destanını okuyabilir. Sizin desteğinizle daha çok insana Kutsal Kitap’ta daha çok vakit geçirmek için yardımcı olabiliriz."
-    amount: "Bağış miktarı (USD)"
     name: "Adınız"
     card number: "Kredi kartı numarası"
     card exp date: "Son kullanım tarihi (AAYY)"
